# guugle

./: .gitignore  Cargo.toml  README.md  TODO.md  body.md
.github/workflows/: check-if-works.yml  release.yml
src/: cli.rs  db_manager.rs  indexer.rs  lib.rs  main.rs  page_rank.rs  page_scraper.rs  search_engine.rs
src/cli/: main.rs
src/db_manager/: creation.rs  helper.rs  ranking.rs  selecting.rs  updating.rs
src/indexer/: loops.rs  visit_types.rs
src/page_rank/: helper.rs  ranker.rs
src/page_scraper/: html.rs  html_getter.rs  html_parser.rs
