[package]
name = "guugle"
description = "web crawler and indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.2"
hyper = { version = "0.14.20", features = ["full"] }
hyper-tls = "0.5.0"
readonly = "0.2.2"
rusqlite = { version = "0.28.0", features = ["bundled", "serde_json"] }
serde_json = "1.0.85"
tokio = { version = "1.20.1", features = ["full"] }
uuid = { version = "1.1.2", features = ["v4"] }
