[package]
name = "guugle"
description = "The most performant web crawler out there"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.20", features = ["derive", "wrap_help"], optional = true }
hyper = { version = "0.14.20", features = ["full"] }
hyper-tls = "0.5.0"
itertools = "0.10.3"
readonly = "0.2.2"
regex = "1.6.0"
rusqlite = { version = "0.28.0", features = ["bundled", "serde_json"] }
tokio = { version = "1.20.1", features = ["full"] }
uuid = { version = "1.1.2", features = ["v4"] }

[features]
default = ["cli"]
cli = ["dep:clap"]
